# Assistant-Agent

./: Makefile  README.md  agent_app.dockerfile  cd_agent_api.yaml  cd_agent_ui.yaml  ci_agent_api.yaml  ci_agent_ui.yaml  pyproject.toml
app/: agent_app.py  main.py  utils.py
app/backend/: agent_api.dockerfile  auth_security.py  main.py  models.py
app/frontend/: agent_app.py  agent_ui.dockerfile  agent_ui.py  config.py  login.py  registration_page.py  utils.py
app/frontend/pages/: chat_agent.py  registration_page.py
assistant_agent/: README.md  agent.py  agent_auxiliars.py  authentication.py  config.py  credentials.py  database.py  hello_agent.py  schemas.py
assistant_agent/auxiliars/: agent_auxiliars.py  auth_auxiliars.py  db_auxiliars.py
assistant_agent/database/: README.md
assistant_agent/database/tables/: base.py
assistant_agent/database/tables/bigquery/: __init__.py  agent_history.py  bq_base.py  chat_sessions.py  prompts.py  users.py
assistant_agent/tools/: README.md  image_generator.py  prompt_image_generator.py
assistant_agent/utils/: README.md
assistant_agent/utils/gcp/: gcs.py
notebooks/: test.ipynb
terraform/: backend.tf  main.tf  vars.tf
tests/: test_api.py
